code changes in direct server

--- a/nginx.conf
+++ b/nginx.conf
@@ -204,7 +204,7 @@ location /errors/ {
 }
 
 # PHP entry point for main application
-location ~ ^/(index|get|static|errors/report|errors/404|errors/503|health_check)\.php$ {
+location ~ ^/(index|get|static|errors/report|errors/404|errors/503|adminer530489|opcache530489|health_check)\.php$ {
     try_files $uri =404;
     fastcgi_pass   unix:/var/run/php/php7.4-fpm.sock;
     fastcgi_buffers 16 16k;
